--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts"
-
-
   },
   "repository": {
     "type": "git",
@@ -23,6 +20,7 @@
   "homepage": "https://github.com/Marco21c/backend-noticias#readme",
   "dependencies": {
     "cors": "2.8.5",
+    "dotenv": "^17.2.3",
     "express": "5.2.1",
     "mongoose": "9.1.3"
   },
