feat: add validations enviroments with zod - fix: changes imports .ts to .js for compatibility in ESM - feat: add CORS configuration - fix: improve PORT manage with default values - fix: changes scripts in package.json - fix: changes configurations in tsconfig.json and tsconfig.build.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true,
+    "skipLibCheck": true
   }
 }
