--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.ts",
-    "start": "node index.ts"
+    "dev": "nodemon --exec ts-node --esm index.ts",
+    "build": "tsc -p tsconfig.build.json",
+    "start": "node dist/index.js",
+    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon --exec ts-node --esm index.ts",
+    "type-check": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -23,12 +27,14 @@
     "cors": "2.8.5",
     "dotenv": "^17.2.3",
     "express": "5.2.1",
-    "mongoose": "9.1.3"
+    "mongoose": "9.1.3",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.8",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
