--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --exec ts-node --esm index.ts",
+    "dev": "tsx watch index.ts",
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js",
     "start:prod": "cross-env NODE_ENV=production node dist/index.js",
-    "start:dev": "cross-env NODE_ENV=development nodemon --exec ts-node --esm index.ts",
+    "start:dev": "cross-env NODE_ENV=development tsx watch index.ts",
     "type-check": "tsc --noEmit"
   },
   "repository": {
@@ -35,8 +35,7 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.8",
     "cross-env": "^7.0.3",
-    "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
