--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "dotenv": "^17.2.3",
     "express": "5.2.1",
     "mongoose": "9.1.3",
-    "zod": "^4.3.5"
-  },
-  "devDependencies": {
+    "zod": "^4.3.5",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.8",
-    "cross-env": "^7.0.3",
-    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "tsx": "^4.21.0"
+
   }
 }
