--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "cors": "2.8.5",
     "dotenv": "^17.2.3",
     "express": "5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "9.1.3",
     "typescript": "^5.9.3",
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "cross-env": "^7.0.3",
     "tsx": "^4.21.0"
   }
