--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "node dist/index.js",
     "start:prod": "cross-env NODE_ENV=production node dist/index.js",
     "start:dev": "cross-env NODE_ENV=development tsx watch index.ts",
+    "create-superadmin": "cross-env NODE_ENV=production tsx src/scripts/createSuperAdmin.ts",
+    "delete-superadmin": "tsx src/scripts/deleteSuperAdmin.ts",
     "type-check": "tsc --noEmit"
   },
   "repository": {
